@@ -5,6 +5,7 @@
 
     * Add the count integration test in Haskell
     * Add the msg_size integration test in Haskell
+    * Add the null integration test in Haskell
 
 2017-03-21 Michael Truog   <mjtruog [at] gmail (dot) com>
 
